<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".playSetup"
    android:background="#ffffff">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/PlayerSetupTitle"
        android:textColor="#1D0870"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/player2"
        android:textColor="#FD6769"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/player2Name"
        app:layout_constraintStart_toStartOf="@+id/player2Name" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/player1"
        android:textColor="#1D0870"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/player1Name"
        app:layout_constraintStart_toStartOf="@+id/player1Name" />

    <EditText

        android:id="@+id/player1Name"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/NameHint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        />

    <EditText
        android:id="@+id/player2Name"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/NameHint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player1Name" />

    <Button
        android:id="@+id/button2"
        android:layout_width="231dp"
        android:layout_height="75dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/button_color"
        android:fontFamily="@font/poppins_semibold"
        android:onClick="submitButtonClick"
        android:text="@string/SubmitButton"
        android:textColor="#FFFFFF"
        android:textSize="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player2Name" />
</androidx.constraintlayout.widget.ConstraintLayout>